Add minify command
Adds minify command to run SVGO with default settings. Unlike format this will create an uglified file to save space.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
                 "title": "Move Cursor"
             },
             {
+                "command": "_svg.minifySvg",
+                "title": "Minify SVG"
+            },
+            {
                 "command": "_svg.showSvg",
                 "title": "%svg.showSvg.title%",
                 "icon": {
