--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "svg",
     "displayName": "SVG",
     "description": "%description%",
-    "version": "0.0.9",
+    "version": "0.1.0",
     "publisher": "jock",
     "engines": {
         "vscode": "^1.8.0"
@@ -37,6 +37,10 @@
             {
                 "command": "_svg.minifySvg",
                 "title": "%svg.minifySvg.title%"
+            },
+            {
+                "command": "_svg.prettySvg",
+                "title": "%svg.prettySvg.title%"
             },
             {
                 "command": "_svg.showSvg",
@@ -124,6 +128,7 @@
     "devDependencies": {
         "@types/mocha": "^2.2.32",
         "@types/node": "^6.0.40",
+        "@types/svgo": "^1.0.0",
         "mocha": "^2.3.3",
         "typescript": "^2.0.3",
         "vscode": "^1.0.0"
