Add Experimental Setting svg.disableFormatOnSave

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,11 +8,10 @@
             "name": "启动扩展",
             "runtimeExecutable": "${execPath}",
             "args": [
-                "--extensionDevelopmentPath=${workspaceRoot}"
+                "--extensionDevelopmentPath=${workspaceFolder}"
             ],
-            "sourceMaps": true,
             "outFiles": [
-                "${workspaceRoot}/out/**/*.js"
+                "${workspaceFolder}/out/**/*.js"
             ],
             "preLaunchTask": "npm"
         },
