--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "theme": "light"
     },
     "categories": [
-        "Languages",
+        "Programming Languages",
         "Linters",
         "Other"
     ],
