--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "svg",
     "displayName": "SVG",
     "description": "%description%",
-    "version": "0.1.4",
+    "version": "0.1.5",
     "publisher": "jock",
     "engines": {
         "vscode": "^1.24.0"
@@ -113,7 +113,15 @@
                     },
                     "description": "%configuration.format.plugins.description%"
                 },
-                "svg.preview.background" :{
+                "svg.pretty.plugins": {
+                    "title": "%configuration.pretty.plugins.title%",
+                    "type": "object",
+                    "default": {
+                        "sortAttrs": true
+                    },
+                    "description": "%configuration.pretty.plugins.description%"
+                },
+                "svg.preview.background": {
                     "title": "%configuration.preview.background.title%",
                     "type": "string",
                     "enum": [
@@ -125,7 +133,7 @@
                     "default": "transparent",
                     "description": "%configuration.preview.background.description%"
                 },
-                "svg.preview.backgroundCustom" :{
+                "svg.preview.backgroundCustom": {
                     "title": "%configuration.preview.backgroundCustom.title%",
                     "type": "string",
                     "default": "#eee",
@@ -150,16 +158,16 @@
         "test": "node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "@types/mocha": "^2.2.48",
-        "@types/node": "^6.0.113",
-        "@types/svgo": "^1.0.1",
-        "mocha": "^2.3.3",
-        "typescript": "^2.9.2",
-        "vscode": "^1.1.18"
+        "@types/mocha": "^5.2.7",
+        "@types/node": "^12.0.8",
+        "@types/svgo": "^1.0.2",
+        "mocha": "^6.1.4",
+        "typescript": "^3.5.2",
+        "vscode": "^1.1.34"
     },
     "dependencies": {
-        "colors": "^1.1.2",
-        "sprintf-js": "^1.0.3",
-        "svgo": "^1.0.1"
+        "colors": "^1.3.3",
+        "sprintf-js": "^1.1.2",
+        "svgo": "^1.2.2"
     }
 }
